--- a/_posts/2015-12-10-Nullbyte.md
+++ b/_posts/2015-12-10-Nullbyte.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 ---
 First blog post. Lately I've been looking at ways to practice my skills as a pentester, and I figured CTFs and practice images would be the way to go. Something about [Vulnhub](https://www.vulnhub.com/) attracting my attention after examining the lot. I believe this is a great way to practice on skills I use everyday on engagements, but also to rehash some techniques rarely used. Personally, I don't find myself reverse engineering an executable on every gig :) Anyway, I figured I would take a swing at [Nullbyte](https://www.vulnhub.com/entry/nullbyte-1,126/) written by [lyon](https://twitter.com/@ly0nx).  Let's get started.
 
